--- a/front/src/rflapsvg.xhtml
+++ b/front/src/rflapsvg.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="195 235 650 225" style="enable-background:new 0 0 1047 698;" xml:space="">
+	 viewBox="0 0 1047 698" style="enable-background:new 0 0 1047 698;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#E25B4B;}
 	.st1{fill:#2F9399;stroke:#2F9399;stroke-miterlimit:10;}
